--- a/indexAr.html
+++ b/indexAr.html
@@ -22,7 +22,7 @@
                 <a-sphere position="0 1.25 1" radius="0.2" color="yellow"></a-sphere>
             </a-entity>      
             <a-plane position="0 0 0" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-                <a-sky></a-sky>
+                <a-sky color="#fffff"></a-sky>
             </a-scene>
         </a-marker>
         <a-entity camera></a-entity>
