--- a/index.html
+++ b/index.html
@@ -9,21 +9,12 @@
         <a-scene embedded arjs>
         <a-marker preset="hiro">
             <!-- we use cors proxy to avoid cross-origin problems ATTENTION! you need to set up your server -->
-            <a-assets>
-                <a-asset-item id="Dragon" src="assets/DragonRigged.glb"></a-asset-item>
-            </a-assets>
-            <a-assets>
-                <a-asset-item id="Witch" src="assets/Witch.glb"></a-asset-item>
-            </a-assets>
-            <a-entity animation="property: position; to: 0 8 0; loop: true; dir: alternate; dur: 2000;" gltf-model="#Dragon"></a-entity>
-            <a-entity animation="property: position; to: 0 11 0; loop: true; dir: alternate; dur: 2000;" position="0 3 0" gltf-model="#Witch"></a-entity>
-            <a-entity animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
-                <a-sphere position="0 1.25 0" radius=".75" color="#EF2D5E"></a-sphere>
-                <a-sphere position="0 1.25 1" radius="0.2" color="yellow"></a-sphere>
-            </a-entity>      
-            <a-plane position="0 0 0" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-                <a-sky color="#fffff"></a-sky>
-            </a-scene>
+            <a-entity
+            position="0 0 0"
+            scale="0.05 0.05 0.05"
+            gltf-model="your-server/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+            ></a-entity>
+        </a-scene>
         </a-marker>
         <a-entity camera></a-entity>
         </a-scene>
